[package]
name = "ms_hudson"
version = "0.1.0"
authors = ["ProCode2 <bpro249@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
clap = "2.33.3"
dotenv = "0.15.0"
tokio = { version = "0.2", features = ["full"] }
colored = "2.0.0"
webbrowser = "0.5.5"
